--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ AgaveVR/Assets/VR_Assets/XR Rig_Agave.prefab
 AgaveVR/Assets/AZURE Nature/SRP Packages/AN_URP_(2019.3+).unitypackage.meta
 AgaveVR/Assets/AZURE Nature/SRP Packages/AN_LWRP_(2019.1-2019.2).unitypackage.meta
 AgaveVR/Assets/AZURE Nature/SRP Packages/AN_Built-in_(2019.1+).unitypackage.meta
+AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
