--- a/AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -11,7 +11,7 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.UsePivotForPlacement",
-                "value": "{\"m_Value\":false}"
+                "value": "{\"m_Value\":true}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -21,7 +21,7 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.AvoidOverlappingObjects",
-                "value": "{\"m_Value\":true}"
+                "value": "{\"m_Value\":false}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -81,12 +81,12 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"39296398db71b94418c195fa11038de5\",\"type\":2},\"prefab\":{\"fileID\":4138999180260341549,\"guid\":\"ee7d25e07175e2143a047b05e2db2674\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"39296398db71b94418c195fa11038de5\",\"type\":2},\"prefab\":{\"fileID\":7885590261696713396,\"guid\":\"9808726fe0a07264c8b82bf9298ccc13\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"39296398db71b94418c195fa11038de5\",\"type\":2},\"prefab\":{\"fileID\":3481347261712032743,\"guid\":\"493cd40029b714741a82daa846ebb76f\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ScatteringEditor.PreviewThumSize",
-                "value": "{\"m_Value\":69}"
+                "value": "{\"m_Value\":70}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
