New Scene and Env Textures
Added new Art scene,added environment textures + made the material for it

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ AgaveVR/Assets/AZURE Nature/SRP Packages/AN_URP_(2019.3+).unitypackage.meta
 AgaveVR/Assets/AZURE Nature/SRP Packages/AN_LWRP_(2019.1-2019.2).unitypackage.meta
 AgaveVR/Assets/AZURE Nature/SRP Packages/AN_Built-in_(2019.1+).unitypackage.meta
 AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
