--- a/AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -81,7 +81,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"39296398db71b94418c195fa11038de5\",\"type\":2},\"prefab\":{\"fileID\":1605768431052801652,\"guid\":\"599ffffc80ea45541a9c0f8a4d60d27d\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
