Updated Art Scene w Walls
New Separatable Walls with Textures

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ AgaveVR/Assets/AZURE Nature/SRP Packages/AN_LWRP_(2019.1-2019.2).unitypackage.me
 AgaveVR/Assets/AZURE Nature/SRP Packages/AN_Built-in_(2019.1+).unitypackage.meta
 AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
 AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+AgaveVR/Assets/Plugins/Android.meta
