Add AgaveVR/Assets/Local to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ AgaveVR/Assets/AZURE Nature/SRP Packages/AN_Built-in_(2019.1+).unitypackage.meta
 AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
 AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
 AgaveVR/Assets/Plugins/Android.meta
+AgaveVR/Assets/Local
