Ignore FR2 Cache files and Local folder meta files

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
 AgaveVR/ProjectSettings/Packages/com.unity.polybrush/Settings.json
 AgaveVR/Assets/Plugins/Android.meta
 AgaveVR/Assets/Local
+AgaveVR/Assets/Local.meta
+AgaveVR/Assets/FR2_Cache.asset
+AgaveVR/Assets/FR2_Cache.asset.meta
