--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,9 @@ AgaveVR/Assets/Local
 AgaveVR/Assets/Local.meta
 AgaveVR/Assets/FR2_Cache.asset
 AgaveVR/Assets/FR2_Cache.asset.meta
+AgaveVR/Assets/Oculus/VR/Editor/Tools.meta
+AgaveVR/Assets/ArtAssets/Textures/rock5.meta
+AgaveVR/Assets/ArtAssets/Textures/rock4.meta
+AgaveVR/Assets/ArtAssets/Textures/rock3.meta
+AgaveVR/Assets/ArtAssets/Textures/rock2.meta
+AgaveVR/Assets/ArtAssets/Textures/rock1.meta
