--- a/AgaveVR/Packages/manifest.json
+++ b/AgaveVR/Packages/manifest.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.6.4",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.learn.iet-framework": "1.2.0",
     "com.unity.polybrush": "1.0.2",
+    "com.unity.postprocessing": "3.0.3",
     "com.unity.test-framework": "1.1.18",
     "com.unity.textmeshpro": "2.1.3",
     "com.unity.timeline": "1.2.17",
