--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,5 @@ AgaveVR/Assets/ArtAssets/Textures/Agave/Baby/BabyMaguey_BaseColor.png.meta
 AgaveVR/Assets/ArtAssets/Textures/Agave/Baby.meta
 AgaveVR/Assets/VR_Assets/XR Rig_Agave.prefab
 AgaveVR/Assets/VR_Assets/XR Rig_Agave.prefab
+AgaveVR/Assets/ArtAssets/Materials/Env_Ground.mat
+AgaveVR/Assets/_Scenes/Art.unity
